initial work on java 24 support